# formalki

./: README.md  README_Practice1.md  README_Practice2.md
Practice1/: CMakeLists.txt  install.sh  main.cpp  main.h
Practice1/include/: LengthStorage.h  RegularHandler.h
Practice1/src/: CMakeLists.txt  LengthStorage.cpp  RegularHandler.cpp
Practice1/testing/: 1.in  CMakeLists.txt  samples1.in  samples2.in  samples3.in  tests.cpp
Practice2/: CMakeLists.txt  main.cpp  main.h
Practice2/cmake/: CodeCoverage.cmake
Practice2/include/: Algo.h  Configuration.h  EarleyAlgorithm.h  Grammar.h
Practice2/src/: CMakeLists.txt  Configuration.cpp  EarleyAlgorithm.cpp  Grammar.cpp
Practice2/testing/: CMakeLists.txt  Grammar.in  InGrammarTest.in  InGrammarTest2.in  NotInGrammarTest.in  NotInGrammarTest2.in  Rule.in  tests.cpp
automat/: 1.in  2.in  CMakeLists.txt  README.md  install.sh  main.cpp  main.h
automat/include/: algosy.h  automat.h
automat/src/: CMakeLists.txt  algosy.cpp  automat.cpp
automat/testing/: 2.in  CMakeLists.txt  first.in  tests.cpp  third.in
